# NyauxKT

./: GNUmakefile  limine.conf
kernel/: Cargo.toml  GNUmakefile  build.rs  test.tar
kernel/src/: lib.rs  main.rs
kernel/src/acpi/: mod.rs
kernel/src/cpu/: lapic.rs  mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/apic/: mod.rs
kernel/src/drivers/serial/: mod.rs
kernel/src/fs/: mod.rs
kernel/src/fs/USTAR/: mod.rs
kernel/src/fs/devfs/: mod.rs  null.rs
kernel/src/fs/tmpfs/: mod.rs
kernel/src/fs/vfs/: mod.rs
kernel/src/idt/: mod.rs
kernel/src/mem/: mod.rs
kernel/src/mem/gdt/: flush.s  mod.rs
kernel/src/mem/phys/: bump.rs  mod.rs
kernel/src/mem/virt/: mod.rs
kernel/src/sched/: mod.rs
kernel/src/utils/: mod.rs
ovmf/: ovmf-code-x86_64.fd  ovmf-vars-x86_64.fd
sysroot/: o
