[package]
name = "NyauxKT"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.1.18"
nasm-rs = "*"
[dependencies]
flanterm_bindings = "1.1.2"
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
limine = "0.3.0"
spin = "0.9.8"
volatile = "0.6.1"
owo-colors = "4.0.0"
bitflags = "2.6.0"
uacpi = {git = "https://github.com/Qwinci/uacpi-rs"}